<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".HealthstationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite">

            <ImageButton
                android:id="@+id/ib_returnIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_return"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/tv_topGuide"
                android:layout_width="325dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/topGuide_healthsation"
                android:textSize="25sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topGuide_healthsation_title"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text="@string/topGuide_healthsation_content"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>