<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.FillphrinfoActivity">

    <LinearLayout
        android:id="@+id/mine_full_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF">
        <ImageView
            android:id="@+id/iv_back_fill"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_return"
            android:layout_margin="5dp">
        </ImageView>
        <TextView
            android:id="@+id/tv_title_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="完善健康档案"
            android:textSize="25dp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="90dp">
        </TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="身高 (cm)"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="单位厘米"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="体重 (kg)"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="单位千克">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="BMI (kg/m^2)"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/et_bmi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="血型"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/et_blood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="腰围 (cm)"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/et_waist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="个人信息"
                    android:textColor="#3c78d8"
                    android:textSize="24dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="婚姻状况"
                android:textColor="#000000"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/sp_marriage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/phrinfo_marriage"
                android:entries="@array/marriageChoose"
                style="@style/MySpinnerStyle"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">
            </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="生育状况"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <Spinner
                    android:id="@+id/sp_kid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/phrinfo_kid"
                    android:entries="@array/kidChoose"
                    style="@style/MySpinnerStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="个人习惯和身体状态"
                    android:textColor="#3c78d8"
                    android:textSize="24dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="吸烟史"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <Spinner
                    android:id="@+id/sp_smoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/phrinfo_somke"
                    android:entries="@array/smokeChoose"
                    style="@style/MySpinnerStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="饮酒史"
                android:textColor="#000000"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/sp_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/phrinfo_drink"
                android:entries="@array/drinkChoose"
                style="@style/MySpinnerStyle"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">
            </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="过敏史"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <Spinner
                    android:id="@+id/sp_allergy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/phrinfo_allergy"
                    android:entries="@array/allergyChoose"
                    style="@style/MySpinnerStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="饮食习惯"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <Spinner
                    android:id="@+id/sp_diet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/phrinfo_diet"
                    android:entries="@array/dietChoose"
                    style="@style/MySpinnerStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="运动频率"
                    android:textColor="#000000"
                    android:textSize="20dp"></TextView>

                <Spinner
                    android:id="@+id/sp_exercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/phrinfo_exercise"
                    android:entries="@array/exerciseChoose"
                    style="@style/MySpinnerStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="保存"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="#6d9eeb">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>